tests/fixtures/positive/release-engineering/NonAsciiIdentifier.kt
package com.example.releaseengineering

class Résumé {
    fun display() {}
}
