tests/fixtures/negative/release-engineering/test-fixture-accessed-from-production/app/src/main/kotlin/com/example/prod/FakeUser.kt
package com.example.prod

class FakeUser

